# ExMD

./: .gitignore  CMakeLists.txt  README.md  build_project.sh  input.txt  main.cpp  main2.cpp  particles.h  test.csv.1  test.csv.2
benchmark/: gravity.m  gravity.m~  solar_system.m  solar_system.m~
benchmark/c_sim/: exmd.csv.0  exmd.csv.1  exmd.csv.10  exmd.csv.100  exmd.csv.101  exmd.csv.102  exmd.csv.103  exmd.csv.104  exmd.csv.105  exmd.csv.106  exmd.csv.107  exmd.csv.108  exmd.csv.109  exmd.csv.11  exmd.csv.110  exmd.csv.111  exmd.csv.112  exmd.csv.113  exmd.csv.114  exmd.csv.115  exmd.csv.116  exmd.csv.117  exmd.csv.118  exmd.csv.119  exmd.csv.12  exmd.csv.120  exmd.csv.121  exmd.csv.122  exmd.csv.123  exmd.csv.124  exmd.csv.125  exmd.csv.126  exmd.csv.127  exmd.csv.128  exmd.csv.129  exmd.csv.13  exmd.csv.130  exmd.csv.131  exmd.csv.132  exmd.csv.133  (+210 more)
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  data_example.txt  example.cmake  example_collision.cpp  example_collision_wave_effect.cpp  example_flocking.cpp  example_gravity.cpp
example/files/: input_collision.csv  input_collision.txt  input_flocking.csv  input_flocking.txt
input/: 200particles.csv  500particles.csv  5kparticles.csv  input.csv  params.json
lib/paraview/: h5py_to_binary.py  para.cmake  visualize.py
src/: CMakeLists.txt  boundary.h  brownian_motion.cpp  brownian_motion.h  data.txt  distance.cpp  distance.h  drag.cpp  drag.h  flocking.cpp  flocking.h  force.h  gravity.cpp  gravity.h  main.cpp  parse.cpp  parse.h  particle.cpp  particle.h  particles.cpp  particles.h  particles.h.orig  physics.cpp  physics.h  project1.cpp  project1.h  random_force.cpp  random_force.h  simulation.cpp  simulation.h  test.csv.3  test_radius.csv  visualization.py  write.cpp  write.h
test/: CMakeLists.txt  data.txt  data2.txt  data_4Particles.txt  data_directionTest.txt  data_directionTest3D.txt  data_distance.txt  data_distance2.txt  data_distance3.txt  data_distance4.txt  data_flocking1.txt  data_flocking2.txt  data_flocking3.txt  data_flocking4.txt  data_main.txt  data_oneParticleInside.txt  data_simulation.txt  data_twoParticlesGravity.txt  data_twoParticlesReflecting.txt  test_distance.cpp  test_distance.cpp.orig  test_drag.cpp  test_flocking.cpp  test_gravity.cpp  test_particles.cpp  test_physics.cpp  test_physics.cpp.orig  test_project1.cpp  test_simulation.cpp
test/files/: vis.csv.0  vis.csv.4
test/pytest/: context.py  test_h5py_to_binary.py  test_visualize.py
test/pytest/files/: test.h5  test_InitOneParticle.h5.0  test_InitTwoParticles.h5.0  test_InitTwoParticles.h5.1  test_InitTwoParticlesTwoTimesteps.npy  test_ReadOneParticle.h5  test_ReadOneParticle.npy  test_ReadParameterFile.csv  test_ReadTwoParticles.h5  test_ReadTwoParticles.npy
